--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,13 @@
         <artifactId>pdfbox</artifactId>
         <version>2.0.22</version>
     </dependency>
+
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>RELEASE</version>
+        <version>LATEST</version>
         <scope>compile</scope>
     </dependency>
-
 
 
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
