--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
         <version>2.14.0</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.3</version>
+    </dependency>
+
 
 </dependencies>
     
